# R_exploration

./: .gitignore  README.md
falcon_planner/exploration_manager/: CMakeLists.txt  package.xml
falcon_planner/exploration_manager/config/: exploration_manager.yaml  rviz.rviz  swarm.rviz
falcon_planner/exploration_manager/config/map/: 1.yaml  duplex_office.yaml  octa_maze.yaml  power_plant.yaml
falcon_planner/exploration_manager/config/robot/: uav_model_simulator.yaml  uav_model_uni250c.yaml
falcon_planner/exploration_manager/include/exploration_manager/: exploration_data.h  exploration_fsm.h  exploration_manager.h
falcon_planner/exploration_manager/launch/: 1.launch  1.xml  exploration.launch  rviz.launch
falcon_planner/exploration_manager/log/: exploration_node.ERROR  exploration_node.FATAL  exploration_node.INFO  exploration_node.WARNING  exploration_node.ending20bit.ending20-bit.log.ERROR.20250301-003101.15610  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-125119.11159  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-125138.11502  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-130428.13743  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-130428.13756  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-132002.19027  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-135257.27172  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-140509.32076  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-141754.39136  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-141850.40553  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-142203.43256  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-142358.45261  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-142447.45634  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-142521.46449  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-142731.48460  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-143930.52950  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-150425.59596  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-154238.84428  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-181353.133694  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-181405.134197  exploration_node.ending20bit.ending20-bit.log.ERROR.20250302-230308.3998  exploration_node.ending20bit.ending20-bit.log.ERROR.20250303-201957.104860  exploration_node.ending20bit.ending20-bit.log.ERROR.20250303-202816.118796  exploration_node.ending20bit.ending20-bit.log.ERROR.20250303-205458.151486  exploration_node.ending20bit.ending20-bit.log.ERROR.20250304-134123.94644  exploration_node.ending20bit.ending20-bit.log.ERROR.20250304-195104.19390  exploration_node.ending20bit.ending20-bit.log.ERROR.20250304-195454.25390  exploration_node.ending20bit.ending20-bit.log.ERROR.20250304-225247.292780  exploration_node.ending20bit.ending20-bit.log.ERROR.20250304-225602.306208  exploration_node.ending20bit.ending20-bit.log.ERROR.20250304-225603.306146  exploration_node.ending20bit.ending20-bit.log.ERROR.20250305-134527.159580  exploration_node.ending20bit.ending20-bit.log.ERROR.20250305-134527.159611  exploration_node.ending20bit.ending20-bit.log.ERROR.20250305-135151.184277  exploration_node.ending20bit.ending20-bit.log.ERROR.20250305-135151.184354  exploration_node.ending20bit.ending20-bit.log.ERROR.20250305-135500.186832  exploration_node.ending20bit.ending20-bit.log.FATAL.20250301-004225.26718  (+2121 more)
falcon_planner/exploration_manager/src/: exploration_fsm.cpp  exploration_manager.cpp  exploration_node.cpp
falcon_planner/exploration_preprocessing/: CMakeLists.txt  package.xml
falcon_planner/exploration_preprocessing/config/: frontier_finder.yaml  hgrid.yaml
falcon_planner/exploration_preprocessing/include/exploration_preprocessing/: connectivity_graph.h  frontier_finder.h  hierarchical_grid.h
falcon_planner/exploration_preprocessing/src/: connectivity_graph.cpp  frontier_finder.cpp  hierarchical_grid.cpp
falcon_planner/exploration_utils/: CMakeLists.txt
falcon_planner/exploration_utils/config/: perception_utils.yaml
falcon_planner/exploration_utils/include/: exploration_types.h  system_info.h
falcon_planner/fast_planner/: CMakeLists.txt  package.xml
falcon_planner/fast_planner/config/: fast_planner.yaml
falcon_planner/fast_planner/include/fast_planner/: planner_manager.h
falcon_planner/fast_planner/src/: planner_manager.cpp  traj_server.cpp
falcon_planner/pathfinding/: CMakeLists.txt  package.xml
falcon_planner/trajectory/: CMakeLists.txt  package.xml
falcon_planner/trajectory/include/bspline/: bspline_optimizer.h  non_uniform_bspline.h
falcon_planner/trajectory/include/polynomial/: polynomial_traj.h
falcon_planner/trajectory/include/traj_utils/: planning_visualization.h
falcon_planner/trajectory/src/bspline/: bspline_optimizer.cpp  non_uniform_bspline.cpp
falcon_planner/trajectory/src/polynomial/: polynomial_traj.cpp
falcon_planner/trajectory/src/traj_utils/: planning_visualization.cpp  trajectory_visualizer.cpp
falcon_planner/voxel_mapping/: CMakeLists.txt  package.xml
uav_simulator/map_render/: CMakeLists.txt
(+75 files in other folders)
